added local python code folder

--- a/00-Setup/00-Setup.ipynb
+++ b/00-Setup/00-Setup.ipynb
@@ -94,6 +94,26 @@
     "\n",
     "Each notebook has it's own python environment with it's own variables.  Variables cell are visibile to the cells below them, but not above them.  This is useful for keeping the code organized and easy to follow."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Local Python files\n",
+    "Some labs will use local .py files.  The `.vscode/settings.json` file sets the environment for resolving imports to the `code` directory.\n",
+    "\n",
+    "For example, `code/sub` contains the file `hello.py`.  The cell below imports the only function in that file and calls it.  You can verify that the configuration is correct by running the cell below.  If the cell runs without error, the configuration is correct.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sub.hello import sayHello\n",
+    "sayHello()"
+   ]
   }
  ],
  "metadata": {
